--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -2,15 +2,51 @@
 <!DOCTYPE html
         PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xml:lang="en"
-      lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:p="http://primefaces.org/ui">
 
-<head>
-    <title>Rock Paper Scissors</title>
-</head>
+<h:head>
+	<title>Rock Paper Scissors</title>
+	<h:outputStylesheet library="css" name="styles.css" />
+</h:head>
 
-<body>
-... body content goes here ...
-</body>
+<h:body>
+	<!-- Header -->
+	<div class="game_header">
+		Rock Paper Scissors
+    </div>
+	<!-- Body -->
+    <div>
+    	<h:form>
+    		<div class="ui-g" style="margin-bottom:20px">
+    			<div class="ui-g-12 ui-md-6 ui-lg-3">
+    				<p:commandButton value="Play round" id="playRound" icon="ui-icon-play" />
+    			</div>
+    			<div class="ui-g-12 ui-md-6 ui-lg-3">
+    				<p:commandButton value="Restart game" id="restartGame" icon="ui-icon-arrowrefresh-1-e" />
+    			</div>
+    		</div>
+    		<div class="ui-g">
+    			<div class="ui-g-3">
+    				<p:outputLabel value="Number of played rounds: " />
+    			</div>
+    		</div>
+		</h:form>		
+		
+		<p:panelGrid style="margin-top:20px">
+		    <f:facet name="header">
+		        <p:row>
+		            <p:column colspan="9" style="font-weight: bold;">Detail of automatic rounds</p:column>
+		        </p:row>
+		        <p:row>
+		            <p:column colspan="3">First player choice</p:column>
+		            <p:column colspan="3">Second player choice</p:column>
+		            <p:column colspan="3">Result of round</p:column>
+		        </p:row>
+		    </f:facet>
+		</p:panelGrid>
+    </div>
+</h:body>
 </html>
