Adding view for statistics of the global use of the game -since it is deployed to the server-. Refactoring of services names.

--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -37,7 +37,7 @@
             </div>
         </h:form>
 
-        <p:panelGrid style="margin-top:20px">
+        <p:panelGrid style="margin-top:20px; margin-bottom: 20px;">
             <f:facet name="header">
                 <p:row>
                     <p:column colspan="9" style="font-weight: bold;">Detail of automatic rounds</p:column>
@@ -73,6 +73,20 @@
                 </p:row>
             </c:forEach>
         </p:panelGrid>
+
+        <!-- Statistics -->
+        <p:separator/>
+
+        <h:form>
+            <div class="ui-g" style="margin-bottom:20px">
+                <div class="ui-g-12 ui-md-6 ui-lg-3">
+                    <p:commandButton value="Show statistics" id="showStatistics"
+                                     action="statistics" ajax="false"
+                                     icon="ui-icon-info"/>
+                </div>
+            </div>
+        </h:form>
+
     </div>
 </h:body>
 </html>
